--- a/styles2.css
+++ b/styles2.css
@@ -1,5 +1,8 @@
 body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    min-height: 100vh;
+    margin: 0;
+
 }
 
 .header {
@@ -62,10 +65,15 @@ ul {
     height: 30px;
 }
 
+.container {
+    margin-top: 50px;
+}
+
 .container-information-items {
     display: flex;
     justify-content: center;
-    gap: 50px;
+    gap: 80px;
+    margin-top: 50px;
 }
 
 .info-title {
@@ -85,3 +93,25 @@ ul {
     border: 5px solid royalblue;
     border-radius: 10px;
 }
+
+.thor-block {
+    background-color: rgb(228, 228, 228);
+    display:flex ;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 100px;
+    padding: 100px 50px;
+}
+
+.thor-text {
+    width: 750px;
+
+}
+
+.thor-text-item {
+    font-size: 36px;
+    font-style: italic;
+    color: #1f2937;
+}
+
+
