--- a/styles2.css
+++ b/styles2.css
@@ -2,6 +2,8 @@ body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     min-height: 100vh;
     margin: 0;
+    display: flex;
+    flex-direction: column;
 
 }
 
@@ -67,6 +69,8 @@ ul {
 
 .container {
     margin-top: 50px;
+    display: flex;
+    flex-direction: column;
 }
 
 .container-information-items {
@@ -112,6 +116,22 @@ ul {
     font-size: 36px;
     font-style: italic;
     color: #1f2937;
+}
+
+.blue-block {
+    margin-top: 50px;
+    display: flex;
+    background-color: royalblue;
+    color: white;
+    width: 700px;
+    align-self: center;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.title-action {
+    font-weight: 500;
+    font-size: 30px;
 }
 
 
