--- a/styles2.css
+++ b/styles2.css
@@ -120,18 +120,36 @@ ul {
 
 .blue-block {
     margin-top: 50px;
+    margin-bottom: 50px;
+    padding: 50px;
     display: flex;
     background-color: royalblue;
     color: white;
-    width: 700px;
+    width: 850px;
     align-self: center;
     justify-content: space-around;
+    border: solid royalblue;
+    border-radius: 15px;
     align-items: center;
 }
 
 .title-action {
-    font-weight: 500;
+    font-weight: 900;
     font-size: 30px;
 }
 
+.text-action {
+    font-size: 18px;
+}
+
+.sign-2 {
+    background-color: royalblue;
+    color: white;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    border:3px solid white;
+    border-radius: 15px;
+    width: 100px;
+    height: 40px;
+    font-weight: bold;
+}
 
