--- a/styles2.css
+++ b/styles2.css
@@ -153,3 +153,12 @@ ul {
     font-weight: bold;
 }
 
+.footer {
+    display: flex;
+    background-color: #1f2937;
+    color: white;
+    align-items: center;
+    justify-content: center;
+    font-size: 24px;
+    padding: 30px;
+}
