--- a/styles2.css
+++ b/styles2.css
@@ -33,9 +33,11 @@ ul {
 
 .header-content {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
-    margin-top: 80px;
+    margin-top: 80px ;
+    gap: 200px;
+    margin-bottom:80px;
 }
 
 .header-content-text {
@@ -61,10 +63,13 @@ ul {
     color: white;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-align: center;
-    border-radius: 5px;
+    border-radius: 10px;
     border:solid royalblue;
-    width: 150px;
-    height: 30px;
+    width: 200px;
+    height: 50px;
+    font-weight: bold;
+    font-size: 20px;
+    margin-top: 15px;
 }
 
 .container {
