--- a/styles2.css
+++ b/styles2.css
@@ -18,6 +18,7 @@ body {
 .links {
     display: flex;
     justify-content: space-around;
+    align-items: center;
 }
 
 .left-link{
@@ -73,7 +74,7 @@ ul {
 }
 
 .container {
-    margin-top: 50px;
+    margin-top: 20px;
     display: flex;
     flex-direction: column;
 }
@@ -81,7 +82,7 @@ ul {
 .container-information-items {
     display: flex;
     justify-content: center;
-    gap: 80px;
+    gap: 100px;
     margin-top: 50px;
 }
 
@@ -130,7 +131,7 @@ ul {
     display: flex;
     background-color: royalblue;
     color: white;
-    width: 850px;
+    width: 950px;
     align-self: center;
     justify-content: space-around;
     border: solid royalblue;
@@ -151,11 +152,12 @@ ul {
     background-color: royalblue;
     color: white;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    border:3px solid white;
-    border-radius: 15px;
-    width: 100px;
+    border:2px solid white;
+    border-radius: 10px;
+    width: 150px;
     height: 40px;
-    font-weight: bold;
+    font-weight: 900;
+    font-size: 15px;
 }
 
 .footer {
